--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title></title>
   </head>
   <body>
-    <button onclick="download_image()">Download</button>
-    <label>Image File:</label><br/>
+    <button style="height:100px;width:100px;" onclick="download_image()">Download</button>
     <input type="file" id="imageLoader" name="imageLoader"/>
     <canvas  crossorigin="anonymous" style="z-index:0;position: absolute;" id="imageCanvas"></canvas>
       <!-- <img style="z-index:10;position: absolute;" src="src/Bacg.png"></img>-->    <script src="script.js" charset="utf-8"></script>
