--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title></title>
   </head>
   <body>
+    <p>Das Bild muss quadratisch sein!</p>
     <button style="height:100px;width:100px;" onclick="download_image()">Download</button>
     <input type="file" id="imageLoader" name="imageLoader"/>
     <canvas  crossorigin="anonymous" style="z-index:0;position: absolute;" id="imageCanvas"></canvas>
-      <!-- <img style="z-index:10;position: absolute;" src="src/Bacg.png"></img>-->    <script src="script.js" charset="utf-8"></script>
+    <script src="script.js" charset="utf-8"></script>
   </body>
 </html>
